# Arxiv-Research-Copilot

./: .env  .gitignore  main.py  prompt.txt  pyproject.toml
src/: config.py  exceptions.py
src/db/interfaces/: postgresql.py
src/schemas/: llm_respone.py
src/schemas/arxiv/: paper.py
src/schemas/guardrails/: models.py
src/schemas/indexing/: models.py
src/service/pdf_parser/: client.py
src/services/agents/: models.py  rag.py  states.py  tools.py
src/services/arxiv/: factory.py
src/services/embeddings/: factory.py
src/services/groq_llm/: client.py  factory.py
src/services/groq_llm/prompts/: prompt.py
src/services/guardrails/: client.py
src/services/guardrails/Input_guardrails/: PII.py  client.py  factory.py  input_limit.py  llm_classify.py  regex_classfy.py
src/services/guardrails/resources/: patterns.py  prompt_classifier.py
src/services/indexing/: factory.py  hybrid_indexer.py  textchunker.py
src/services/opensearch/: client.py  factory.py  index_config_hybrid.py
src/services/pdf_parser/: docling.py  factory.py  parser.py
